RESOLVED FIXED 87155
REGRESSION (r90971): the cursor is painted “behind” the placeholder text
https://bugs.webkit.org/show_bug.cgi?id=87155
Summary REGRESSION (r90971): the cursor is painted “behind” the placeholder text
Alexey Proskuryakov
Reported 2012-05-22 12:07:05 PDT
Created attachment 143345 [details] test case * STEPS TO REPRODUCE 1. Load the attached simplified test page 2. Click in the input field and look at the blinking I cursor The insertion point should be opaque, but it no longer is.
Attachments
test case (1.02 KB, text/html)
2012-05-22 12:07 PDT, Alexey Proskuryakov
no flags
screenshot (8.64 KB, image/png)
2012-05-22 12:08 PDT, Alexey Proskuryakov
no flags
Patch (76.63 KB, patch)
2012-05-28 00:05 PDT, Kent Tamura
no flags
Alexey Proskuryakov
Comment 1 2012-05-22 12:08:45 PDT
Created attachment 143348 [details] screenshot
Alexey Proskuryakov
Comment 2 2012-05-22 12:09:32 PDT
Kent Tamura
Comment 3 2012-05-28 00:05:02 PDT
Hajime Morrita
Comment 4 2012-05-29 00:42:18 PDT
Comment on attachment 144287 [details] Patch Looks reasonable. It's sad to see we need to touch the renderer here though.
Kent Tamura
Comment 5 2012-05-29 00:43:42 PDT
(In reply to comment #4) > Looks reasonable. It's sad to see we need to touch the renderer here though. Yeah, I'll revisit this issue in the future when the editing code becomes shadow-clean.
WebKit Review Bot
Comment 6 2012-05-29 01:23:35 PDT
Comment on attachment 144287 [details] Patch Clearing flags on attachment: 144287 Committed r118733: <http://trac.webkit.org/changeset/118733>
WebKit Review Bot
Comment 7 2012-05-29 01:23:40 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 8 2013-09-09 16:30:23 PDT
Comment on attachment 144287 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144287&action=review > Source/WebCore/html/HTMLTextFormControlElement.cpp:172 > + // FIXME: We should change the order of DOM nodes. But it makes an assertion > + // failure in editing code. That's because the assertion in the editing code is bogus.
Note You need to log in before you can comment on or make changes to this bug.